ingress/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: junk-food-ingress-helth-no-auth
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /order/health
            pathType: Exact
            backend:
              service:
                name: order-service
                port:
                  number: 8300
          - path: /kitchen/healt
            pathType: Exact
            backend:
              service:
                name: kitchen-service
                port:
                  number: 8200
          - path: /notification/health
            pathType: Exact
            backend:
              service:
                name: notification-service
                port:
                  number: 8100
          - path: /user/health
            pathType: Exact
            backend:
              service:
                name: user-service
                port:
                  number: 8000
          - path: /user/actuator
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: junk-food-ingress-auth
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://user-service.app.svc.cluster.local:8000/user/auth"
    nginx.ingress.kubernetes.io/auth-response-headers: "X_User_Email,X_User_Is_Admin"
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8300
          - path: /kitchen
            pathType: Prefix
            backend:
              service:
                name: kitchen-service
                port:
                  number: 8200
          - path: /notification
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8100
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8000
